# jnfs

./: README.md
eqx_ofdft/: LiH_1D.py  flow.py  functionals.py  ode.py  utils.py
eqx_ofdft/jnfs/: pyproject.toml
eqx_ofdft/jnfs/_src/one_dimensional_example/: LiH_1D.py  flow.py  functionals.py  ode.py  requirements.txt  utils.py
eqx_ofdft/jnfs/jnfs_AlexandreDeCamargo.egg-info/: PKG-INFO  SOURCES.txt
